kubernetes/clusters/mbhome/flux-system-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: source-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: flux
    app.kubernetes.io/component: source-controller
spec:
  endpointSelector:
    matchLabels:
      app: source-controller
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9440"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: kustomize-controller
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: helm-controller
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: notification-controller
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toFQDNs:
        - matchName: github.com
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
    - toFQDNs:
        # A helm repository should be added here to allow access
        - matchName: github.com
        - matchName: api.github.com
        - matchPattern: "*.githubusercontent.com"
        - matchName: charts.dexidp.io
        - matchName: charts.jetstack.io
        - matchName: cloudnative-pg.github.io
        - matchName: helm.releases.hashicorp.com
        - matchName: kubernetes-sigs.github.io
        - matchName: prometheus-community.github.io
        - matchName: raw.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kustomize-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: flux
    app.kubernetes.io/component: kustomize-controller
spec:
  endpointSelector:
    matchLabels:
      app: kustomize-controller
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9440"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: source-controller
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: notification-controller
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: helm-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: flux
    app.kubernetes.io/component: helm-controller
spec:
  endpointSelector:
    matchLabels:
      app: helm-controller
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9440"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: source-controller
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: notification-controller
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: notification-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: flux
    app.kubernetes.io/component: notification-controller
spec:
  endpointSelector:
    matchLabels:
      app: notification-controller
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9440"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: source-controller
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: kustomize-controller
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app: helm-controller
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
